[package]
name = "be-keto-mojo-gh-bot-action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
octocrab = "0.18.1"
pest = "2.5.5"
pest_derive = "2.5.5"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
rstest = "0.16.0"
